[tool.poetry]
name = "fastapi-lifespan-dependencies"
version = "0.1.0"
description = ""
authors = ["Someone <someone@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
mypy = "^1.9.0"
uvicorn = "^0.29.0"
pytest = "^8.2.2"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
